--- a/SDL3_Base/SDL3_Base.vcxproj
+++ b/SDL3_Base/SDL3_Base.vcxproj
@@ -21,11 +21,13 @@
   <ItemGroup>
     <ClCompile Include="source\Game.cpp" />
     <ClCompile Include="source\ImageRenderer.cpp" />
+    <ClCompile Include="source\InputManager.cpp" />
     <ClCompile Include="source\Main.cpp" />
     <ClCompile Include="source\RenderManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\Game.h" />
+    <ClInclude Include="source\InputManager.h" />
     <ClInclude Include="source\ImageObject.h" />
     <ClInclude Include="source\ImageRenderer.h" />
     <ClInclude Include="source\Object.h" />
