--- a/SDL3_Base/SDL3_Base.vcxproj
+++ b/SDL3_Base/SDL3_Base.vcxproj
@@ -19,6 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="source\AABB.cpp" />
     <ClCompile Include="source\Game.cpp" />
     <ClCompile Include="source\ImageRenderer.cpp" />
     <ClCompile Include="source\InputManager.cpp" />
@@ -26,6 +27,7 @@
     <ClCompile Include="source\RenderManager.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="source\AABB.h" />
     <ClInclude Include="source\Game.h" />
     <ClInclude Include="source\InputManager.h" />
     <ClInclude Include="source\ImageObject.h" />
@@ -33,6 +35,7 @@
     <ClInclude Include="source\Object.h" />
     <ClInclude Include="source\Renderer.h" />
     <ClInclude Include="source\RenderManager.h" />
+    <ClInclude Include="source\Rigidbody.h" />
     <ClInclude Include="source\Transform.h" />
     <ClInclude Include="source\Vector2.h" />
   </ItemGroup>
