--- a/SDL3_Base/SDL3_Base.vcxproj
+++ b/SDL3_Base/SDL3_Base.vcxproj
@@ -25,6 +25,7 @@
     <ClCompile Include="source\InputManager.cpp" />
     <ClCompile Include="source\Main.cpp" />
     <ClCompile Include="source\RenderManager.cpp" />
+    <ClCompile Include="source\Rigidbody.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\AABB.h" />
@@ -36,6 +37,7 @@
     <ClInclude Include="source\Renderer.h" />
     <ClInclude Include="source\RenderManager.h" />
     <ClInclude Include="source\Rigidbody.h" />
+    <ClInclude Include="source\TestObject.h" />
     <ClInclude Include="source\Transform.h" />
     <ClInclude Include="source\Vector2.h" />
   </ItemGroup>
