--- a/SDL3_Base/SDL3_Base.vcxproj.filters
+++ b/SDL3_Base/SDL3_Base.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="source\AABB.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="source\Rigidbody.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\Game.h">
@@ -66,6 +69,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="source\Rigidbody.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="source\TestObject.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
